# sig

./: .env  Cargo.toml
.states/vm-prague/: state.json
artifacts/: Groth16Verifier.json  Groth16Verifier_metadata.json  SP1Verifier.json  SP1Verifier_metadata.json  SignatureVerifier.json  SignatureVerifierTest.json  SignatureVerifierTest_metadata.json  SignatureVerifier_metadata.json  Vm.json  VmSafe.json  VmSafe_metadata.json  Vm_metadata.json  console2.json  console2_metadata.json
contracts/.states/vm-osaka/: state.json
contracts/.states/vm-prague/: state.json
contracts/artifacts/: Groth16Verifier.json  Groth16Verifier_metadata.json  SP1Verifier.json  SP1Verifier_metadata.json  SignatureVerifier.json  SignatureVerifierTest.json  SignatureVerifierTest_metadata.json  SignatureVerifier_metadata.json
contracts/src/: Groth16Verifier.sol  SignatureVerifier.sol  groth16-fixture.json
contracts/src/fixtures/: groth16-fixture.json
contracts/test/: SignatureVerifier.t.sol
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
script/src/: verify.rs
