[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = { version = "1.0", default-features = false }

[patch.crates-io]
# 关键：将标准库替换为 SP1 优化版
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", branch = "master" }
ecdsa = { git = "https://github.com/sp1-patches/signatures", branch = "patch-ecdsa-v0.16.9" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-sha2-v0.10.8" }
