[package]
name = "shared-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true, default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-big-array = "0.5"
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
