[package]
version = "0.1.0"
name = "secp256k1-script"
edition = "2021"
default-run = "secp256k1"

[[bin]]
name = "secp256k1"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
rand = "0.8"
k256 = { version = "0.13.3", features = ["ecdsa", "serde"] }
sp1-sdk = { version = "5.0.8", features = ["cuda"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
shared-lib = { path = "../lib" }
dotenv = "0.15.0"


[build-dependencies]
sp1-build = "5.0.8"
