[package]
version = "0.1.0"
name = "secp256k1-script"
edition = "2021"
default-run = "secp256k1"

[[bin]]
name = "secp256k1"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[lib]
name = "secp256k1_script"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
k256 = { version = "0.13.3", features = ["ecdsa", "serde"] }
sp1-sdk = "5.0.8"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
num-bigint = "0.4"
sha2 = "0.10.8"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
alloy-sol-types = { workspace = true }
shared-lib = { path = "../lib" }
dotenv = "0.15.0"


[build-dependencies]
sp1-build = "5.0.8"
